Add link to releases page

--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
         </div>
     </div>
 
-    <div class="bottom-bar">v1.0.0</div>
+    <a href="https://github.com/kyuquu/SRTBEditor/releases/" target="_blank" class="bottom-bar">v1.0.0</a>
 </body>
 </html>
