changed default title, etc

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="top-bar">
         <div class="tb-chart">
             <div>
-                <span id="tb-chart-title">Song Name</span>
-                <span id="tb-chart-artist">Song Artist</span>
+                <span id="tb-chart-title"></span>
+                <span id="tb-chart-artist"><i>No SRTB loaded</i></span>
             </div>
-            <div id="tb-chart-filename">spinshare_blahblahblah.srtb</div>
+            <div id="tb-chart-filename"><i>click NEW to get started</i></div>
         </div>
 
         <div class="tb-buttons">
