Add support for json file uploads

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="tb-button-dropdown" id="tb-button-dropdown-new">
                     <div>
                         <label for="tb-button-new-upload" class="tb-input-label">UPLOAD FILE</label>
-                        <input type="file" accept=".srtb" id="tb-button-new-upload"> <!-- "accept" attribute needs to be updated when support for other filetypes uploads is implemented -->
+                        <input type="file" accept=".srtb, .json" id="tb-button-new-upload"> <!-- "accept" attribute needs to be updated when support for other filetypes uploads is implemented -->
                         <button onclick="loadTemplate('Custom.json')">CREATE NEW</button>
                     </div>
                 </div>
