--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script defer src="script.js" type="text/javascript"></script>
+    <script defer src="main.js" type="text/javascript"></script>
     <script defer src="values.js" type="text/javascript"></script>
 </head>
 
