Add support for boolean values in basic view
Also add "allow leaderboard creation" value and change styles

--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
                         <div class="bv-item-name">Charter</div>
                         <input type="text" onblur="this.scrollLeft=0" class="bv-item-value" id="bv-charter"></input>
                     </div>
+
+                    <div class="bv-item inline">
+                        <input type="checkbox" class="bv-item-value" id="bv-allow-custom-leaderboards"></input>
+                        <div class="bv-item-name">Allow Leaderboard Creation</div>
+                    </div>
                 </div>
 
                 <div class="bv bv1">
