--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A web-based application for viewing and editing .srtb files for Spin Rhythm XD">
     <title>SRTB Editor</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
