--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div>
                         <label for="tb-button-new-upload" class="tb-input-label">UPLOAD FILE</label>
                         <input type="file" accept=".srtb, .json" id="tb-button-new-upload"> <!-- "accept" attribute needs to be updated when support for other filetypes uploads is implemented -->
-                        <button onclick="loadTemplate('Custom.json')">CREATE NEW</button>
+                        <button onclick="loadTemplate('Custom.srtb')">CREATE NEW</button>
                     </div>
                 </div>
             </div>
