Refactor values.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
 
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/basic-tab.css">
+    <link rel="stylesheet" href="styles/basic-view.css">
 
     <script defer src="main.js" type="text/javascript"></script>
     <script defer src="values.js" type="text/javascript"></script>
@@ -21,10 +21,10 @@
     <div class="top-bar">
         <div class="tb-chart">
             <div>
-                <span id="tb-title"></span>
-                <span id="tb-artist"><i>No SRTB loaded</i></span>
+                <span id="tb-title" class="tb-value"></span>
+                <span id="tb-artist" class="tb-value"><i>No SRTB loaded</i></span>
             </div>
-            <div id="tb-filename"><i>click NEW to get started</i></div>
+            <div id="tb-filename" class="tb-value"><i>click NEW to get started</i></div>
         </div>
 
         <div class="tb-buttons">
@@ -112,7 +112,7 @@
     </div>
 
     <div class="bottom-bar">
-        <a href="https://github.com/kyuquu/SRTBEditor/releases/" target="_blank">v0.2.1</a>
+        <a href="https://github.com/kyuquu/SRTBEditor/releases/" target="_blank">v0.3.0</a>
         <span>&#8226;</span>
         <span>Compatible with SRXD v1.4.1</span>
     </div>
