Disable user input until file is uploaded

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="tabs">
             <div class="tab" id="tab0">
-                <div class="bv bv0">
+                <div class="bv bv0 disabled">
                     <div class="bv-item">
                         <div class="bv-item-name">Title</div>
                         <input type="text" onblur="this.scrollLeft=0" class="bv-item-value" id="bv-title">
@@ -100,13 +100,13 @@
                     </div>
                 </div>
 
-                <div class="bv bv1">
+                <div class="bv bv1 disabled">
                     <div class="bv-"></div>
                 </div>
             </div>
 
             <div class="tab tab-inactive" id="tab1">
-                <textarea spellcheck="false" id="json-editor"></textarea>
+                <textarea spellcheck="false" id="json-editor" disabled></textarea>
             </div>
         </div>
     </div>
