Add spinsha.re links

--- a/index.html
+++ b/index.html
@@ -112,9 +112,18 @@
     </div>
 
     <div class="bottom-bar">
-        <a href="https://github.com/kyuquu/SRTBEditor/releases/" target="_blank">v0.3.0</a>
-        <span>&#8226;</span>
-        <span>Compatible with SRXD v1.4.1</span>
+        <span class="bb bb0">
+            <span>Developed by</span>
+            <a href="https://spinsha.re/user/1998" target="_blank">kyuquu</a>
+            <span>and</span>
+            <a href="https://spinsha.re/user/624" target="_blank">Gavi Guy</a>
+        </span>
+
+        <span class="bb bb1">
+            <a href="https://github.com/kyuquu/SRTBEditor/releases/" target="_blank">v0.3.0</a>
+            <span>&#8226;</span>
+            <span>Up to date with SRXD v1.4.1</span>
+        </span>
     </div>
 </body>
 </html>
