Add functionality and timer to editor buttons

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                     </div>
 
                     <div class="jv-buttons">
-                        <button class="jv-button" id="jv-button-save" onclick="">SAVE CHANGES</button>
-                        <button class="jv-button" id="jv-button-discard" onclick="">DISCARD CHANGES</button>
+                        <button class="jv-button disabled" id="jv-button-save" onclick="saveEditorChanges()">SAVE CHANGES</button>
+                        <button class="jv-button disabled" id="jv-button-discard" onclick="discardEditorChanges()">DISCARD CHANGES</button>
                     </div>
                 </div>
             </div>
