--- a/index.html
+++ b/index.html
@@ -10,12 +10,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
 
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/basic-view.css">
-    <link rel="stylesheet" href="styles/json-view.css">
+    <!-- - - - MAIN STYLESHEETS - - - -->
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/top-bar.css">
+    <link rel="stylesheet" type="text/css" href="styles/basic-view.css">
+    <link rel="stylesheet" type="text/css" href="styles/json-view.css">
+    <link rel="stylesheet" type="text/css" href="styles/bottom-bar.css">
 
-    <script defer src="scripts/main.js" type="text/javascript"></script>
-    <script defer src="scripts/values.js" type="text/javascript"></script>
+    <!-- - - - MAIN SCRIPTS - - - - - -->
+    <script defer type="text/javascript" src="scripts/main.js"></script>
+    <script defer type="text/javascript" src="scripts/values.js"></script>
+
+    <!-- - - - COMPONENTS - - - - - - -->
+    <script defer type="text/javascript" src="components/components.js"></script>
+    <!-- button -->     <link rel="stylesheet" type="text/css" href="components/button/button.css">
+                        <script defer type="text/javascript" src="components/button/button.js"></script>
+    <!-- dropdown -->   <link rel="stylesheet" type="text/css" href="components/dropdown/dropdown.css">
+                        <script defer type="text/javascript" src="components/dropdown/dropdown.js"></script>
 </head>
 
 <body>
@@ -30,39 +41,12 @@
             </div>
         </div>
 
-        <div class="tb-buttons">
-            <div class="tb-button-container">
-                <button class="tb-button" id="tb-button-new" onclick="toggleDropdown('new')">
-                    <div>
-                        <span>LOAD</span>
-                        <span></span>
-                    </div>
-                </button>
-                <div class="tb-button-dropdown" id="tb-button-dropdown-new">
-                    <div>
-                        <button onclick="loadTemplate('Custom.srtb')">CREATE NEW</button>
-                        <label for="tb-button-new-upload" class="tb-input-label">FROM FILE</label>
-                        <input type="file" accept=".srtb, .json" id="tb-button-new-upload"> <!-- "accept" attribute needs to be updated when support for other filetypes uploads is implemented -->
-                        <button>FROM LINK</button>
-                    </div>
-                </div>
-            </div>
-            <div class="tb-button-container disabled">
-                <button class="tb-button" id="tb-button-save" onclick="toggleDropdown('save')">
-                    <div>
-                        <span>SAVE</span>
-                        <span></span>
-                    </div>
-                </button>
-                <div class="tb-button-dropdown" id="tb-button-dropdown-save">
-                    <div>
-                        <button onclick="saveAsSRTB()">SAVE AS .SRTB</button>
-                        <button onclick="saveAsJSON()">SAVE AS .JSON</button>
-                        <button onclick="saveAsZIP()">SAVE AS .ZIP</button>
-                    </div>
-                </div>
-            </div>
+        <div class="tb-dropdowns">
+            <div class="dropdown" id="dropdown-tb-load"></div>
+            <div class="dropdown disabled" id="dropdown-tb-save"></div>
         </div>
+
+        <input type="file" accept=".srtb, .json" id="tb-file-input"> <!-- "accept" attribute needs to be updated when support for other filetypes uploads is implemented -->
     </div>
 
     <div class="tab-manager">
@@ -115,7 +99,7 @@
                         <div id="editor"></div>
     
                         <!-- scripts for Ace -->
-                        <script src="node_modules/ace-builds/src/ace.js" type="text/javascript" charset="utf-8"></script>
+                        <script charset="utf-8" type="text/javascript" src="node_modules/ace-builds/src/ace.js"></script>
                         <script>
                             var JSONEditor = ace.edit("editor");
                             JSONEditor.setTheme("ace/theme/dracula");
@@ -128,8 +112,8 @@
                     </div>
 
                     <div class="jv-buttons">
-                        <button class="jv-button disabled" id="jv-button-save" onclick="saveEditorChanges()">SAVE CHANGES</button>
-                        <button class="jv-button disabled" id="jv-button-discard" onclick="discardEditorChanges()">DISCARD CHANGES</button>
+                        <button class="jv-button button disabled" id="button-jv-save"></button>
+                        <button class="jv-button button disabled" id="button-jv-discard"></button>
                     </div>
                 </div>
             </div>
