--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div id="editor"></div>
     
                         <!-- scripts for Ace -->
-                        <script charset="utf-8" type="text/javascript" src="node_modules/ace-builds/src/ace.js"></script>
+                        <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.37.0/ace.js" integrity="sha512-AYZKM93Ch1NQ0U57Na4pMAFoAfYviwmhZQWfUfbGtzYM4vs+DiQ8d02ByhyYAVMPgJWmb5qdWlN8cPDKCWS8iw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
                         <script>
                             var JSONEditor = ace.edit("editor");
                             JSONEditor.setTheme("ace/theme/dracula");
