Reset album art when loading a new chart
Also includes some cleanup from the previous commit

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <div id="loading-screen" class="active">
         <span class="loading-icon"></span>
-        <span id="loading-message">FETCHING TEMPLATE...</span>
+        <span id="loading-message"></span>
     </div>
 </body>
 </html>
