Add (limited) support for audio uploads

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <div id="tab0" class="tab active">
                 <div class="bv bv0 disabled">
                     <div class="file-input" id="bv-album-art"></div>
+                    <div class="file-input" id="bv-audio-clips"></div>
                     <div class="text-input" id="bv-title"></div>
                     <div class="text-input" id="bv-subtitle"></div>
                     <div class="text-input" id="bv-artist"></div>
@@ -84,6 +85,7 @@
 
                 <div class="bv bv1 disabled">
                     <img id="bv-album-art-image" src="assets/images/Default_-_Cover.png">
+                    <audio id="bv-audio-clips-audio" src="assets/audio/Get Good.ogg" controls></audio>
                 </div>
             </div>
 
