--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- - - - MAIN SCRIPTS - - - - - -->
     <script defer type="text/javascript" src="scripts/main.js"></script>
     <script defer type="text/javascript" src="scripts/values.js"></script>
+    <script defer type="text/javascript" src="scripts/diagnostics.js"></script>
 
     <!-- - - - COMPONENTS - - - - - - -->
     <!-- button -->     <link rel="stylesheet" type="text/css" href="components/button/button.css">
@@ -101,8 +102,15 @@
                     </div>
                 </div>
             </div>
+            
 
-            <div id="tab2" class="tab"></div>
+            <div id="tab2" class="tab">
+                <div class="dv disabled">
+                    <div class="text-input" id="dv-test"></div>
+                    <div id="dv-max-score"></div>
+
+                </div>
+            </div>
         </div>
     </div>
 
