--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
             <div id="tab2" class="tab">
                 <div class="dv disabled">
                     <div class="text-input" id="dv-test"></div>
-                    <div id="dv-max-score"></div>
+                    <div id="dv-max-score">Max score:</div>
+                    <div id="dv-max-combo">Max combo:</div>
 
                 </div>
             </div>
