--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="bv bv0 disabled">
                     <div class="file-input" id="bv-album-art"></div>
                     <div class="file-input" id="bv-audio-clips"></div>
-                    <div class="text-input" id="bv-title"></div>
+                    <!-- <div class="text-input" id="bv-title"></div> -->
                     <div class="text-input" id="bv-subtitle"></div>
                     <div class="text-input" id="bv-artist"></div>
                     <div class="text-input" id="bv-featured-artist"></div>
@@ -107,6 +107,7 @@
             <div id="tab2" class="tab">
                 <div class="dv disabled">
                     <div class="text-input" id="dv-test"></div>
+                    <div class="text-input" id="bv-title"></div>
                     <div id="dv-max-score">Max score:</div>
                     <div id="dv-max-combo">Max combo:</div>
 
