added color & spin balance data

--- a/index.html
+++ b/index.html
@@ -107,8 +107,12 @@
             <div id="tab2" class="tab">
                 <div class="dv disabled">
                     <div class="text-input" id="dv-summary"></div>
+                    <br>
                     <div id="dv-max-score">Max score:</div>
                     <div id="dv-max-combo">Max combo:</div>
+                    <br>
+                    <div id="dv-colors">Note Colors (red:blue):</div>
+                    <div id="dv-movement">Spin Directions (left:right):</div>
 
                 </div>
             </div>
@@ -124,7 +128,7 @@
         </span>
 
         <span class="bb bb1">
-            <a href="https://github.com/kyuquu/SRTBEditor/releases/" target="_blank">v0.4.1</a>
+            <a href="https://github.com/kyuquu/SRTBEditor/releases/" target="_blank">v0.4.2</a>
             <span>&#8226;</span>
             <span>Up to date with SRXD v1.4.1</span>
         </span>
