refactor to fit naming convention

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
                     <div id="dv-max-score">Max score:</div>
                     <div id="dv-max-combo">Max combo:</div>
                     <br>
-                    <div id="dv-nMatch"></div>
-                    <div id="dv-nTap"></div>
-                    <div id="dv-nBeat"></div>
-                    <div id="dv-nHold"></div>
-                    <div id="dv-nRelease"></div>
-                    <div id="dv-nSpin"></div>
-                    <div id="dv-nScratch"></div>
+                    <div id="dv-match-count"></div>
+                    <div id="dv-tap-count"></div>
+                    <div id="dv-beat-count"></div>
+                    <div id="dv-hold-count"></div>
+                    <div id="dv-release-count"></div>
+                    <div id="dv-spin-count"></div>
+                    <div id="dv-scratch-count"></div>
                     <br>
                     <div id="dv-colors">Note Colors (red:blue):</div>
                     <div id="dv-movement">Spin Directions (left:right):</div>
