removed diagnostic clutter

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 <div class="dv disabled">
                     <div class="text-input" id="dv-summary"></div>
                     <br>
-                    <div id="dv-max-score">Max score:</div>
-                    <div id="dv-max-combo">Max combo:</div>
+                    <div id="dv-max-score"></div>
+                    <div id="dv-max-combo"></div>
                     <br>
                     <div id="dv-match-count"></div>
                     <div id="dv-tap-count"></div>
@@ -119,8 +119,8 @@
                     <div id="dv-spin-count"></div>
                     <div id="dv-scratch-count"></div>
                     <br>
-                    <div id="dv-colors">Note Colors (red:blue):</div>
-                    <div id="dv-movement">Spin Directions (left:right):</div>
+                    <div id="dv-colors"></div>
+                    <div id="dv-movement"></div>
 
                 </div>
             </div>
